--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -220,7 +220,7 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 fieldset {
-    border: 1px solid #c0c0c0;
+    border: 1px solid #a8a7a7;
     margin: 0 2px;
     padding: 0.35em 0.625em 0.75em
 }
@@ -273,7 +273,7 @@ img::-moz-selection {
 }
 
 body {
-    -webkit-tap-highlight-color: #FFF498
+    -webkit-tap-highlight-color: #503C3C
 }
 
 body {
@@ -326,7 +326,7 @@ body {
     width: 2px;
     height: 70%;
     max-height: 750px;
-    background-color: #555;
+    background-color: #525252;
     opacity: .35;
     z-index: 10
 }
@@ -373,7 +373,7 @@ body {
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
-    background-color: #0c0c0c;
+    background-color: #1b1b1b;
     z-index: 12
 }
 
@@ -577,7 +577,7 @@ body {
     color: #fff;
     font-weight: 700;
     text-transform: uppercase;
-    background-color: #0f33ff;
+    background-color: #d11800;
     border: none;
     opacity: 0;
     visibility: hidden;
@@ -674,7 +674,7 @@ body {
 }
 
 .side-nav li.is-active {
-    color: #0f33ff;
+    color: #D6C0B3;
     -webkit-transition: color .4s ease-in-out;
     transition: color .4s ease-in-out
 }
@@ -766,7 +766,7 @@ body {
     left: 23px;
     right: 0;
     height: 100%;
-    background-color: #AB886D;
+    background-color: #7E6363;
     z-index: -1;
     -webkit-transition: left .2s ease-in-out;
     transition: left .2s ease-in-out
@@ -810,13 +810,14 @@ body {
 .intro--options>a {
     max-width: 250px;
     text-decoration: none;
-    color: #282828;
+    color: #503C3C;
     -webkit-transition: color .2s ease-in-out;
     transition: color .2s ease-in-out
 }
 
 .intro--options>a:hover {
-    color: #fff
+    color: #fff;
+
 }
 
 .intro--options h3 {
@@ -1164,7 +1165,7 @@ body {
     left: 200px;
     -webkit-transform: rotate(-25deg);
     transform: rotate(-25deg);
-    border: 5px solid #0f33ff;
+    border: 5px solid #E4E0E1;
     border-right-color: transparent;
     border-bottom-color: transparent
 }
@@ -1178,7 +1179,7 @@ body {
     transform: rotate(45deg);
     width: 10px;
     height: 10px;
-    background-color: #0f33ff
+    background-color: #D6C0B3
 }
 
 .about--banner h2 {
@@ -1197,7 +1198,7 @@ body {
     left: 268px;
     width: 30px;
     height: 30px;
-    background-color: #0f33ff;
+    background-color: #AB886D;
     border-radius: 50%
 }
 
@@ -1208,7 +1209,7 @@ body {
     left: 255px;
     width: 10px;
     height: 10px;
-    background-color: #0f33ff
+    background-color: #493628
 }
 
 .about--banner a {
@@ -1260,7 +1261,7 @@ body {
     height: 75px;
     text-decoration: none;
     color: #fff;
-    border: 10px solid #0f33ff;
+    border: 10px solid #7E6363;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat
@@ -1443,16 +1444,16 @@ body {
 }
 
 .contact--lockup .modal--options li:nth-child(1) {
-    background-color: #1769ff
+    background-color: #A87C7C
 }
 
 .contact--lockup .modal--options li:nth-child(2) {
-    background-color: #ea4c89
+    background-color: #7E6363
 }
 
 .contact--lockup .modal--options li:nth-child(3) {
     margin-bottom: 0;
-    background-color: #0f33ff;
+    background-color: #503C3C;
     text-transform: uppercase
 }
 
@@ -1523,7 +1524,7 @@ body {
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
-    background-color: #0f33ff;
+    background-color: #e7e7e7;
     border: none;
     border-radius: 0
 }
@@ -1604,8 +1605,8 @@ body {
 }
 
 .work-request--options input[type="checkbox"]:checked+label {
-    background-color: #0f33ff;
-    border-color: #0f33ff
+    background-color: #ff0f0f;
+    border-color: #06ebf3
 }
 
 .work-request--options input[type="checkbox"]:checked+label svg {
@@ -1739,7 +1740,7 @@ body {
     -webkit-transform: translateZ(0) translateX(0) rotateY(0deg);
     transform: translateZ(0) translateX(0) rotateY(0deg);
     min-height: 100%;
-    outline: 30px solid #0f33ff;
+    outline: 30px solid #7E6363;
     -webkit-transition: -webkit-transform .4s;
     transition: -webkit-transform .4s;
     transition: transform .4s;
@@ -1767,7 +1768,7 @@ body {
 .effect-rotate-left--animate .container {
     -webkit-transform: translateZ(-1800px) translateX(-50%) rotateY(45deg);
     transform: translateZ(-1800px) translateX(-50%) rotateY(45deg);
-    outline: 30px solid #0f33ff
+    outline: 30px solid #7E6363
 }
 
 .outer-nav {
@@ -1841,7 +1842,7 @@ body {
     width: 110%;
     height: 15px;
     opacity: 0;
-    background-color: #0f33ff
+    background-color: #503C3C
 }
 
 .outer-nav>li.is-active::before {
@@ -1878,4 +1879,16 @@ body {
 .outer-nav li.is-vis:nth-child(5) {
     -webkit-transition-delay: .16s;
     transition-delay: .16s
+}
+
+img[alt="Welcome"]
+{
+    width: 300px;
+    height: auto;
+}
+
+img[alt="Logo-mobile"]
+{
+    width: 50px;
+    height: auto;
 }
