--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -608,7 +608,7 @@ body {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    width: 100px;
+    width: 140px;
     height: 70%;
     max-height: 750px;
     -webkit-box-orient: vertical;
@@ -628,26 +628,30 @@ body {
 .side-nav>li {
     position: relative;
     top: -5px;
+    left: 0px;
     color: #fff;
-    font-size: 6px;
+    font-size: 10px;
     cursor: pointer
 }
 
 .side-nav>li span {
     position: relative;
-    top: 3px;
-    left: 10px;
-    color: #fff;
-    font-size: 14px;
+    top: 1px;
+    left: 1px;
+    color: #bdbdbd;
+    font-size: 12px;
     font-weight: 300;
-    opacity: 0;
-    visibility: hidden
+    opacity: 0.9;
+    visibility: visible;
+    transition: color 0.4s ease-in-out;
 }
+
+
 
 .side-nav>li::before {
     position: absolute;
-    top: 3px;
-    left: 10px;
+    top: 0px;
+    left: -36px;
     color: #555;
     font-size: 14px;
     font-weight: 300
@@ -674,21 +678,30 @@ body {
 }
 
 .side-nav li.is-active {
-    color: #D6C0B3;
+    color: #ceb5b0;
     -webkit-transition: color .4s ease-in-out;
-    transition: color .4s ease-in-out
+    transition: all .4s ease-in-out;
 }
 
 .side-nav li.is-active span {
     opacity: 1;
+    top: 4px;
     visibility: visible;
     -webkit-transition: opacity .4s ease-in-out;
-    transition: opacity .4s ease-in-out
+    color: #ceb5b0;
+    font-size: 18px;
+    font-weight: bold;
+    transition: all 0.4s ease-in-out;
+    
 }
 
 .side-nav li.is-active::before {
-    left: -33px;
-    color: #fff
+    left: -37px;
+    top: 4px;
+    color: #fff;
+    font-size: 17px;
+    font-weight: bold;
+    transition: all 0.4s ease-in-out;
 }
 
 .intro {
@@ -1396,7 +1409,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0.9)),
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0.9)),
     url("../img/Louisville.jpg");
     background-position: center;
     background-size: cover;
@@ -1506,7 +1519,8 @@ body {
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
-    margin: 0 auto
+    margin: 0 auto;
+    overflow-y: auto; 
 }
 
 @media (max-width: 1180px) {
@@ -1516,10 +1530,27 @@ body {
 }
 
 .hire h2 {
-    margin: 0 0 20px 0;
+    margin: 40px 0 20px 0;
     font-size: 30px;
-    text-align: center
+    text-align: center;
 }
+
+
+.experience-content {
+    max-height: 70%;
+    overflow-y: auto;  
+    padding-right: 20px; 
+    margin-top: 20px;
+}
+
+.experience-content h3, .experience-content h4, .experience-content p {
+    margin-bottom: 15px;
+}
+
+.experience-content {
+    scroll-behavior: smooth;
+}
+
 
 .work-request {
     display: -webkit-box;
