--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -341,9 +341,10 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    margin: 0;
+    display: flex;
     padding: 0;
-    list-style: none
+    list-style: none;
+
 }
 
 .l-section {
@@ -622,7 +623,8 @@ body {
     margin: 0;
     padding: 0;
     list-style-position: inside;
-    z-index: 10
+    z-index: 10;
+    
 }
 
 .side-nav>li {
@@ -677,6 +679,10 @@ body {
     content: "05"
 }
 
+.side-nav li:nth-child(6)::before {
+    content: "06"
+}
+
 .side-nav li.is-active {
     color: #ceb5b0;
     -webkit-transition: color .4s ease-in-out;
@@ -722,7 +728,8 @@ body {
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
-    margin: 0 auto
+    margin: auto;
+
 }
 
 @media (max-width: 1180px) {
@@ -733,7 +740,8 @@ body {
 
 .intro--banner {
     position: relative;
-    height: 475px
+    height: 475px;
+    margin-top: 10px;
 }
 
 .intro--banner::before {
@@ -771,7 +779,9 @@ body {
     font-weight: 700;
     text-transform: uppercase;
     background-color: transparent;
-    border: none
+    border: none;
+    margin-bottom: 200px;
+
 }
 
 .intro--banner button .btn-background {
@@ -818,7 +828,9 @@ body {
     justify-content: space-between;
     margin: 0;
     padding: 0;
-    list-style: none
+    list-style: none;
+    overflow: hidden;
+
 }
 
 .intro--options>a {
@@ -826,7 +838,8 @@ body {
     text-decoration: none;
     color: #503C3C;
     -webkit-transition: color .2s ease-in-out;
-    transition: color .2s ease-in-out
+    transition: color .2s ease-in-out;
+    
 }
 
 .intro--options>a:hover {
@@ -1507,8 +1520,8 @@ body {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    width: 700px;
-    max-width: 75%;
+    width: 900px;
+    max-width: 80%;
     height: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1519,7 +1532,7 @@ body {
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
-    margin: 0 auto;
+    margin: auto;
     overflow-y: auto; 
 }
 
@@ -1539,16 +1552,68 @@ body {
 .experience-content {
     max-height: 70%;
     overflow-y: auto;  
-    padding-right: 20px; 
+    padding-right: 100px; 
     margin-top: 20px;
 }
 
-.experience-content h3, .experience-content h4, .experience-content p {
-    margin-bottom: 15px;
+.experience-content h3{
+    font-size: 18px;
+
 }
 
-.experience-content {
-    scroll-behavior: smooth;
+.experience-content h4 {
+    text-align: right;
+    margin-top: -20px;
+}
+
+.experience-content p {
+    margin-bottom: 50px;
+}
+
+.goals {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0.9)),
+    url("../img/web.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.goals--lockup {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 900px;
+    max-width: 80%;
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin: 0 auto;
+    overflow-y: auto; 
+}
+
+
+.goals h1 {
+    margin: 40px 0 20px 0;
+    font-size: 32px;
+    text-align: center;
+}
+
+.goals h2 {
+    font-size: 18px;
 }
 
 
